welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:6: error: illegal start of simple expression
} else if (){
           ^Runner:11: error: ')' expected but '}' found.
}
^